- Fix whitespace unit tests + Add colors treatment + unit tests

--- a/tests/CSSqueeze/Tests/expected/whitespace.css
+++ b/tests/CSSqueeze/Tests/expected/whitespace.css
@@ -1,1 +1,1 @@
-.classname{border:12px;float:left}
+.classname{float:left;border:12px}
